Acerca de, Listo Settings se fue, cambio Strings

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -44,4 +44,5 @@
     <string name="ingles">English</string>
     <string name="developed_by">Desarrollado por:</string>
     <string name="acerca_de_texto">La informaci\u00F3n y logos contenidos son de car\u00E1cter informativo en busca de fomentar el Football en M\u00E9xico.</string>
+    <string name="construyendo">(En construcci\u00F3n)</string>
 </resources>
