Se agrego el recyclerview a la lista de equipos, se cambio el nombre del activity a TeamsActivity y se hizo refactor para que el cambio aplique a todo. Se agrego butterknife a las librerías. falta terminar el listado de teams, de momento ya funciona al 100. Se cambio Noticias por noticias

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">LFA</string>
 
     <string name="empty" translatable="false"></string>
+    <string name="empty_team_name">Name not found</string>
+    <string name="empty_number_value" translatable="false">\?</string>
     <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
     <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
 
