--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">LFA</string>
 
     <string name="empty"></string>
-
+    <string name="empty_team_name">Nombre no encontrado</string>
     <string name="condors">Condors</string>
     <string name="eagles">Eagles</string>
     <string name="mayas">Mayas</string>
