--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">LFA</string>
 
-    <string name="empty"></string>
+    <string name="empty" translatable="false"></string>
     <string name="empty_team_name">Nombre no encontrado</string>
     <string name="condors">Condors</string>
     <string name="eagles">Eagles</string>
